--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -59,6 +59,8 @@ body {
 	font-family: Avenir,Verdana,sans-serif;
 	margin-top: 1em;
 	margin-left: 1em;
+	max-width: 100vw;
+	overflow-x: hidden;
 }
 
 p {
